# Nmap Changelog ($Id$); -*-text-*-

o Fixed a bug that caused Nmap to fail to find any network interface when
  at least one of them is in the monitor mode. The fix was to define the
  ARP_HRD_IEEE80211_RADIOTAP 802.11 radiotap header identifier in the
  libdnet-stripped code. Network interfaces that are in this mode are used
  by radiotap for 802.11 frame injection and reception. The bug was
  reported by Tom Eichstaedt and Henri Doreau.
  http://seclists.org/nmap-dev/2012/q2/449
  http://seclists.org/nmap-dev/2012/q2/478
  [Djalal Harouni, Henri Doreau]

o [Zenmap] Added Italian translation by Francesco Tombolini.

o [NSE] Added the script eppc-enum-processes that enumerates active
  applications, their PID and the UID under which they run through the Apple
  Remote Event protocol. [Patrik Karlsson]

o [NSE] Added the Internet Storage Name Service (iSNS) library and the
  isns-info script that lists information about portals and iSCSI devices.
  [Patrik Karlsson]

o [NSE] Added rmi-vuln-classloader which scans for machines vulnerable to
  remote class loading. [Aleksandar Nikolic]

o [NSE] Rewrote mysql-brute to use brute library [Aleksandar Nikolic]

o Fixed the greppable output of hosts that time-out (when --host-timeout was
  used and the host timed-out after something was received from that host).
  This issue was reported by Matthew Morgan. [jah]

o [Zenmap] Added Japanese translation by Yuji Tounai.

o [NSE] Added the script icap-info, which tries to identify common ICAP
  service names and list service and tag information. [Patrik Karlsson]

o [NSE] Added the script http-traceroute, which exploits the
  Max-Forwards HTTP header to detect reverse proxies. [Hani Benhabiles]

o Added the script distcc-CVE-2004-2687 that checks and exploits a remote
  command execution vulnerability in distcc. [Patrik Karlsson]

o Added two new scripts mysql-query and mysql-dump-hashes, which add support